--- a/TylorBookStore/TylorBookStore.csproj
+++ b/TylorBookStore/TylorBookStore.csproj
@@ -6,4 +6,8 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.0-preview.3.23174.2" />
+  </ItemGroup>
+
 </Project>
