--- a/TylorBookStore/TylorBookStore.csproj
+++ b/TylorBookStore/TylorBookStore.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.0-preview.3.23174.2" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.0-preview.3.23174.2" />
   </ItemGroup>
 
 </Project>
