Removed category model. Removed error view model.

--- a/TylorBookStore/TylorBookStore.csproj
+++ b/TylorBookStore/TylorBookStore.csproj
@@ -22,4 +22,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\TylorPortfolio.Models\TylorPortfolio.Models.csproj" />
+  </ItemGroup>
+
 </Project>
