--- a/TylorPortfolio.DataAccess/TylorPortfolio.DataAccess.csproj
+++ b/TylorPortfolio.DataAccess/TylorPortfolio.DataAccess.csproj
@@ -6,4 +6,12 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.0-preview.3.23174.2" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\TylorPortfolio.Models\TylorPortfolio.Models.csproj" />
+  </ItemGroup>
+
 </Project>
