--- a/TylorPortfolio/appsettings.json
+++ b/TylorPortfolio/appsettings.json
@@ -7,7 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost\\SQLEXPRESS;Database=BookStore;Trusted_Connection=True;TrustServerCertificate=True",
-    "MotorcycleConnection": "Server=localhost\\SQLEXPRESS;Database=MotorcycleStore;Trusted_Connection=True;TrustServerCertificate=True"
+    "DefaultConnection": "Server=localhost\\SQLEXPRESS;Database=BookStore;Trusted_Connection=True;TrustServerCertificate=True"
   }
 }
