Saving work for today.

--- a/TylorBookStore/TylorTrubPortfolio.csproj
+++ b/TylorBookStore/TylorTrubPortfolio.csproj
@@ -29,6 +29,7 @@
 
   <ItemGroup>
     <Folder Include="wwwroot\Images\product\" />
+    <Folder Include="wwwroot\videos\" />
   </ItemGroup>
 
 </Project>
