Added motorcycle datatables JS. Added store enhancements. Added api call for get all motorcycles.

--- a/TylorBookStore/TylorTrubPortfolio.csproj
+++ b/TylorBookStore/TylorTrubPortfolio.csproj
@@ -31,4 +31,11 @@
     <Folder Include="wwwroot\Images\product\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Content Update="wwwroot\js\motorcycle.js">
+      <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+    </Content>
+  </ItemGroup>
+
 </Project>
