--- a/TylorBookStore/Properties/launchSettings.json
+++ b/TylorBookStore/Properties/launchSettings.json
@@ -20,6 +20,7 @@
     },
     "https": {
       "commandName": "Project",
+      "hotReloadEnabled": true,
       "dotnetRunMessages": true,
       "launchBrowser": true,
       "applicationUrl": "https://localhost:7244;http://localhost:5162",
