--- a/TylorPortfolio.DataAccess/TylorTrubPortfolio.DataAccess.csproj
+++ b/TylorPortfolio.DataAccess/TylorTrubPortfolio.DataAccess.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+	  <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="7.0.5" />
 	  <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.0-preview.3.23174.2" />
 	  <PackageReference Include="Microsoft.EntityFrameworkCore.Abstractions" Version="8.0.0-preview.3.23174.2" />
 	  <PackageReference Include="Microsoft.EntityFrameworkCore.Analyzers" Version="8.0.0-preview.3.23174.2" />
