--- a/TylorPortfolio.Models/TylorTrubPortfolio.Models.csproj
+++ b/TylorPortfolio.Models/TylorTrubPortfolio.Models.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.2.5" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.ViewFeatures" Version="2.2.0" />
+    <PackageReference Include="Microsoft.Extensions.Identity.Stores" Version="8.0.0-preview.4.23260.4" />
   </ItemGroup>
 
 </Project>
