Added project repository. Added project to unit of work. Added project to dbsets. Renamed game repository. Added project model.

--- a/TylorPortfolio/TylorTrubPortfolio.csproj
+++ b/TylorPortfolio/TylorTrubPortfolio.csproj
@@ -31,8 +31,9 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Areas\Customer\Views\Projects\" />
+    <Folder Include="bin\Debug\net8.0\" />
     <Folder Include="wwwroot\Images\games\" />
+    <Folder Include="wwwroot\Images\project\" />
     <Folder Include="wwwroot\Images\product\" />
   </ItemGroup>
 
