--- a/TylorPortfolio/TylorTrubPortfolio.csproj
+++ b/TylorPortfolio/TylorTrubPortfolio.csproj
@@ -23,6 +23,7 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="8.0.0-preview.4.23261.6" />
+    <PackageReference Include="Stripe.net" Version="41.18.0" />
   </ItemGroup>
 
   <ItemGroup>
