Renamed utility namespace to Client.BL. Fixed appsettings organization.

--- a/TylorPortfolio/appsettings.Development.json
+++ b/TylorPortfolio/appsettings.Development.json
@@ -1,8 +1,13 @@
 {
+  "DetailedErrors": true,
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=TY\\SQLEXPRESS;Database=Portfolio;Trusted_Connection=True;TrustServerCertificate=True"
   }
 }
